--- a/Исслеование архитектурного решения.md
+++ b/Исслеование архитектурного решения.md
@@ -18,6 +18,8 @@
 ### Управление исключениями:
 ### Связь:
 ### Кэширование:
+## Диаграмма классов приложения
+![Image alt](https://github.com/SexyalGUN/Gym-Diary/blob/master/Class Diagram.png)
 
 # ЧАСТЬ 2
 ## Анализ архитектуры разрабатываемого приложения
@@ -25,9 +27,10 @@
 ### хранения отправленных сообщений. 
 ## Обобщённое представление архитектуры
 ### представление данных->бизнес-логика->хранение данных
-![Image](https://github.com/SexyalGUN/Gym-Diary/blob/master/архитектура.png)
+![Image](https://github.com/SexyalGUN/Gym-Diary/blob/master/архитектура.jpg)
 
 ## Диаграмма классов
+![Image](https://github.com/SexyalGUN/Gym-Diary/blob/master/Class DiagramAuto.png)
 
 # ЧАСТЬ 3
 ### Модель AS-IS - это модель «как есть», т.е. модель уже существующего процесса/функции. Обследование процессов является
