Update Исслеование архитектурного решения.md

--- a/Исслеование архитектурного решения.md
+++ b/Исслеование архитектурного решения.md
@@ -19,18 +19,17 @@
 ### Связь:
 ### Кэширование:
 ## Диаграмма классов приложения
-![Image alt](https://github.com/SexyalGUN/Gym-Diary/blob/master/Class Diagram.png)
+![Image alt](https://github.com/Daniil-Lukashchik/Chat-program/blob/master/Class%20Diagram.png)
 
 # ЧАСТЬ 2
 ## Анализ архитектуры разрабатываемого приложения
 ### Тип архитектуры приложения: клиент-сервер. В роли сервера выступает база данных, а логика приложения представлена процедурами
 ### хранения отправленных сообщений. 
 ## Обобщённое представление архитектуры
-### представление данных->бизнес-логика->хранение данных
-![Image](https://github.com/SexyalGUN/Gym-Diary/blob/master/архитектура.jpg)
+![Image](https://github.com/Daniil-Lukashchik/Chat-program/blob/master/%D0%B0%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D1%83%D1%80%D0%B0.jpg)
 
 ## Диаграмма классов
-![Image](https://github.com/SexyalGUN/Gym-Diary/blob/master/Class DiagramAuto.png)
+![Image](https://github.com/Daniil-Lukashchik/Chat-program/blob/master/Class%20DiagramAuto.png)
 
 # ЧАСТЬ 3
 ### Модель AS-IS - это модель «как есть», т.е. модель уже существующего процесса/функции. Обследование процессов является
