Update Исслеование архитектурного решения.md

--- a/Исслеование архитектурного решения.md
+++ b/Исслеование архитектурного решения.md
@@ -1,25 +1,20 @@
 # ЧАСТЬ 1
-## Тип приложения
+## 1. Тип приложения
 ### для мобильных устройств на основе ОС Android.
-## Стратегия развёртывания
+## 2. Стратегия развёртывания
 ### распределённая с сохранением состояния (отправленное сообщение хранится в базе данных).
-## Обоснование выбора технологии
+## 3. Обоснование выбора технологии
 ### Приложение разрабатывается в среде разработки Android Studio, так как данная среда является очень удобной для создания мобильных
 ### приложений
-## Показатели качества
+## 4. Показатели качества
 ### 1)Удобство использования(приложение имеет удобный интерфейс и достаточно простой функционал).
 ### 2)Переносимость: возмжность установки приложения на любом устройстве с подходящей операционной системой.
 ### 3)Эффективность(использование ресурсов: возможность редактирования и удаления отправленных сообщений; по времени: быстрая
 ### отправка сообщений).
-## Пути реализации сквозной функциональности:
-### Инструментирование и протоколирование:
-### Аутентификация:
+## 5. Пути реализации сквозной функциональности:
+### Аутентификация: при входе в приложение повторно пользователь вводит логин и пароль, сравниваемые с данными в базе данных.
 ### Авторизация: при входе в приложение пользователь проходит процедуру авторизации.
-### Управление исключениями:
-### Связь:
-### Кэширование:
-## Диаграмма классов приложения
-![Image alt](https://github.com/Daniil-Lukashchik/Chat-program/blob/master/Class%20Diagram.png)
+### Кэширование: отправленные сообщения хранятся в базе данных.
 
 # ЧАСТЬ 2
 ## Анализ архитектуры разрабатываемого приложения
@@ -27,17 +22,30 @@
 ### хранения отправленных сообщений. 
 ## Обобщённое представление архитектуры
 ![Image](https://github.com/Daniil-Lukashchik/Chat-program/blob/master/%D0%B0%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D1%83%D1%80%D0%B0.jpg)
+## Диаграмма развёртывания
+![Image alt](https://github.com/Daniil-Lukashchik/Chat-program/blob/master/Deployment%20Diagram.png)
 
-## Диаграмма классов
-![Image](https://github.com/Daniil-Lukashchik/Chat-program/blob/master/Class%20DiagramAuto.png)
+## Архитектура "To be"
+
+### 1. Диаграмма компонентов
+![Image alt](https://github.com/Daniil-Lukashchik/Chat-program/blob/master/Component%20Diagram.png)
+### 2. Диаграмма классов
+![Image alt](https://github.com/Daniil-Lukashchik/Chat-program/blob/master/Class%20Diagram.png)
+
+## Архитектура "As is"
+
+### 1. Диаграмма компонентов
+![Image alt](https://github.com/Daniil-Lukashchik/Chat-program/blob/master/Component%20DiagramAuto.png)
+### 2. Диаграмма классов
+![Image alt](https://github.com/Daniil-Lukashchik/Chat-program/blob/master/Class%20DiagramAuto.png)
 
 # ЧАСТЬ 3
-### Модель AS-IS - это модель «как есть», т.е. модель уже существующего процесса/функции. Обследование процессов является
-### обязательной частью любого проекта создания или развития системы. Построение функциональной модели AS-IS позволяет четко
-### зафиксировать какие информационные объекты используются при выполнении функций различного уровня детализации.
+### Модель AS-IS - это модель «как есть», т.е. модель уже существующего процесса/функции. 
 ### Найденные в модели AS-IS недостатки можно исправить при создании модели ТО-ВЕ, которая нужна для оценки последствий внедрения
 ### информационной системы и анализа альтернативных путей выполнения работы и документирования того, как система будет
 ### функционировать в будущем.
 
-# ВЫВОДЫ
-
+## Для реализации лучшей функциональности приложения в дальнейшем понадобится улучшить систему авторизации и аутенцификации пользователя (хеширование), а также улучшить кэширование сообщений. Это обеспечит высокую эффективность и производительность приложения. 
+## В связи с вышеперечисленными причинами мы будет улучшать архитектуру согласно следующим принципам: 
+### Принцип единственности ответственности (Каждый программный объект имеет одно и только одно назначение); 
+### Принцип DRY(Don't Repeat Yourself) - не повторяйся.
