Update Исслеование архитектурного решения.md

--- a/Исслеование архитектурного решения.md
+++ b/Исслеование архитектурного решения.md
@@ -41,9 +41,7 @@
 
 # ЧАСТЬ 3
 ### Модель AS-IS - это модель «как есть», т.е. модель уже существующего процесса/функции. 
-### Найденные в модели AS-IS недостатки можно исправить при создании модели ТО-ВЕ, которая нужна для оценки последствий внедрения
-### информационной системы и анализа альтернативных путей выполнения работы и документирования того, как система будет
-### функционировать в будущем.
+### Найденные в модели AS-IS недостатки можно исправить при создании модели ТО-ВЕ, которая нужна для оценки последствий внедрения информационной системы и анализа альтернативных путей выполнения работы и документирования того, как система будет функционировать в будущем.
 
 ## Для реализации лучшей функциональности приложения в дальнейшем понадобится улучшить систему авторизации и аутенцификации пользователя (хеширование), а также улучшить кэширование сообщений. Это обеспечит высокую эффективность и производительность приложения. 
 ## В связи с вышеперечисленными причинами мы будет улучшать архитектуру согласно следующим принципам: 
